--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:14
 
-WORKDIR /usr/src/app/backend
+WORKDIR /usr/src/app/frontend
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3001
+EXPOSE 3000
 
 CMD [ "npm", "start" ]
