--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon --ignore 'video/' src/app.ts",
-    "server": "nodemon  -w . -w .env src/app.ts",
-    "client": "npm start --prefix ../frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "nodemon",
+    "serve": "ts-node src/app.ts",
     "test": "ENV_FILE=./config/.env.test jest",
-    "tsc": "tsc",
+    "build": "tsc",
     "prettier": "prettier --write src/**",
-    "lint:fix": "eslint --fix src/**"
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --fix src/**"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "@types/express": "^4.17.9",
     "@types/express-fileupload": "^1.1.5",
     "@types/jest": "^26.0.15",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "concurrently": "^5.3.0",
     "config": "^3.3.2",
